--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Aghil 💕 Sanisha - We are getting married</title>
+	<title>Nandini 💕 Narayan - We are getting married</title>
   <!-- 
 	//////////////////////////////////////////////////////
 
@@ -22,7 +22,7 @@
 	 -->
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="Aghil 💕 Sanishna - We are getting married"/>
+	<meta property="og:title" content="Nandini 💕 Narayan - We are getting married"/>
 	<meta property="og:image" content="http://www.aghil-weds-sanisha.ml/images/welocome-small.jpg"/>
 	<meta property="og:description" content="As we step into a new phase of life, we want you to be right by our side. Please come, fill our big day with your love and laughter"/>
 
@@ -66,7 +66,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Aghil 💕 Sanisha</h1>
+							<h1>Nandini💕 Narayans</h1>
 							<h2>We Are Getting Married</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p><a href="#" class="btn btn-default btn-sm">Save the date | 19 May - 2019</a></p>
